--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>teraze</title>
-    <meta name="description" content="">
+    <title>teraze- front end developer</title>
+    <meta name="description" content="Cv, front end developer, jobbansökning">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
+    <meta property="og:title" content="CV">
+    <meta property="og:type" content="document">
+    <meta property="og:url" content="https://eraze86.github.io">
     <meta property="og:image" content="">
 
     <link rel="manifest" href="site.webmanifest">
@@ -20,7 +20,11 @@
     <link rel="stylesheet" href="scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;700&display=swap" rel="stylesheet">
+    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <meta name="theme-color" content="#fafafa">
     <script src="https://kit.fontawesome.com/b2868a3a08.js" crossorigin="anonymous"></script>
@@ -37,9 +41,9 @@
             <h1>Therese Rosvall</h1>
         </div>
         <nav>
-            <button aria-label="linkedin"><i class="fab fa-linkedin"></i></button>
-            <button aria-label="kontakt"><i class="fas fa-envelope"></i></button>
-            <button aria-label="github"><i class="fab fa-github"></i></button>
+            <button aria-label="linkedin"><a href="http://www.linkedin.com/in/therese-rosvall"><i class="fab fa-linkedin"></a></i></button>
+            <button aria-label="kontakta"><a href="http://www.hotmail.se"><i class="fas fa-envelope"></a></i></button>
+            <button aria-label="github"><a href="https://github.com/Eraze86"><i class="fab fa-github"></a></i></button>
         </nav>
     </header>
 <main>
