--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
 
 <body>
     <div class="wrapper">
-        <img src="pictures/profilbild.jpg" alt="bild på mig">
+        <img src="pictures/profilbild.jpg" alt="bild på mig" width="720" height="720">
     </div>
     <header>
         <div class="border">
@@ -41,61 +41,61 @@
             <h1>Therese Rosvall</h1>
         </div>
         <nav>
-            <button aria-label="linkedin"><a href="http://www.linkedin.com/in/therese-rosvall"><i class="fab fa-linkedin"></a></i></button>
-            <button aria-label="kontakta"><a href="http://www.hotmail.se"><i class="fas fa-envelope"></a></i></button>
-            <button aria-label="github"><a href="https://github.com/Eraze86"><i class="fab fa-github"></a></i></button>
+            <a aria-label="linkedin" href="http://www.linkedin.com/in/therese-rosvall"><i class="fab fa-linkedin"></i></a>
+            <a aria-label="kontakta" href="http://www.hotmail.se"><i class="fas fa-envelope"></i></a>
+            <a aria-label="github" href="https://github.com/Eraze86"><i class="fab fa-github"></i></a>
         </nav>
     </header>
-<main>
-    <section>
-        <article class="strength">
-            <h2> Styrkor</h2>
-            <ul>
-                <li>Informations sökare</li>
-                <li>ordningsam</li>
-                <li>kreativ</li>
-            </ul>
-            <h2>Språk</h2>
-            <ul>
-                <li>svenska</li>
-                <li>engelska</li>
-             </ul>
-         </article>
-         <article  class="about">
-         <h2>Hej!</h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-         </article>
-     </section>
-     <div class="background"></div>
-    <section>
-        <article class="skills">
-            <h2> Skills</h2>
+    <main>
+        <section>
+            <article class="strength">
+                <h2> Styrkor</h2>
                 <ul>
-                <li>Html</li>
-                <li>Css</li>
-                <li>Java-script</li>
-                <li></li>
-            </ul>
-        </article>
+                    <li>Informations sökare</li>
+                    <li>ordningsam</li>
+                    <li>kreativ</li>
+                </ul>
+                <h2>Språk</h2>
+                <ul>
+                    <li>svenska</li>
+                    <li>engelska</li>
+                </ul>
+            </article>
+            <article  class="about">
+                <h2>Hej!</h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            </article>
+        </section>
+        <div class="background"></div>
+        <section>
+            <article class="skills">
+                <h2> Skills</h2>
+                <ul>
+                    <li>Html</li>
+                    <li>Css</li>
+                    <li>Java-script</li>
+                    <li></li>
+                </ul>
+            </article>
 
-        <article class="work">
-            <h2>Erfarenhet:</h2>
-                <table>
-                    <tbody>
-                        <tr>
-                            <th>2013-nutid</th>
-                            <td> Pottan ab (före detta Godsinlösen) -service, försäljning, hantering av bagage, rengöring av lokaler m.m</td>
-                        </tr>
-                        <tr>
-                            <th>2008-2012</th>
-                            <td>Kock -Arbetat på diverse skolor. </td>
-                        </tr>
-                    </tbody>
-                </table>
-        </article>
-    </section> 
-     <section>
-        <article class="education">
-            <h2>Utbilding:</h2>
+            <article class="work">
+                <h2>Erfarenhet:</h2>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>2013-nutid</th>
+                                <td> Pottan ab (före detta Godsinlösen) -service, försäljning, hantering av bagage, rengöring av lokaler m.m</td>
+                            </tr>
+                            <tr>
+                                <th>2008-2012</th>
+                                <td>Kock -Arbetat på diverse skolor. </td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </article>
+        </section> 
+        <section>
+            <article class="education">
+                <h2>Utbilding:</h2>
                 <ul>
                     <li>Webbutveckling I V2021</li>
                     <li>Företagsekonomi GR (A), Ekonomistyrning V2021</li>
@@ -110,8 +110,7 @@
        </section>
    </main>
    <footer>
-
+    See you soon :)
    </footer>
 </body>
-
 </html>
