--- a/index.html
+++ b/index.html
@@ -1,100 +1,73 @@
-<!doctype html>
-<html class="no-js" lang="sv">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>teraze- front end developer</title>
-    <meta name="description" content="Cv, front end developer, jobbansökning">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
-    <meta property="og:title" content="CV">
-    <meta property="og:type" content="document">
-    <meta property="og:url" content="https://eraze86.github.io">
-    <meta property="og:image" content="">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <link rel="stylesheet" href="/html5-boilerplate_v8.0.0/css/normalize.css">
-    <link rel="stylesheet" href="scss/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
-    <meta name="theme-color" content="#fafafa">
-    <script src="https://kit.fontawesome.com/b2868a3a08.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="wrapper">
-        <img src="pictures/profilbild.jpg" alt="bild på mig" width="720" height="720">
-    </div>
+
     <header>
-        <div class="border">
-        </div>
-        <div class="name">
-            <h1>Therese Rosvall</h1>
-        </div>
+        <div id="border1"></div>
+        <img src="pictures/profilbild.jpg" alt="picture of me" width: 631px; height: 631px;>
         <nav>
-            <a aria-label="linkedin" href="http://www.linkedin.com/in/therese-rosvall"><i class="fab fa-linkedin"></i></a>
-            <a aria-label="kontakta" href="http://www.hotmail.se"><i class="fas fa-envelope"></i></a>
-            <a aria-label="github" href="https://github.com/Eraze86"><i class="fab fa-github"></i></a>
+           <a href="https://github.com/Eraze86">github</a>
+           <a href="https://www.hotmail.se">hotmail</a>
+           <a href="http://www.linkedin.com/in/therese-rosvall">linkedIn</a>
+        
+           
         </nav>
     </header>
     <main>
-        <section>
-            <article class="strength">
-                <h2> Styrkor</h2>
+        <section id="thisisme">
+            <h2>Hej!</h2>
+            Mitt namn är Therese, studerar till front end utvecklare på medieinstitutet. jag älskar att
+            vara kreativ, att skapa , och har alltid något ny ide på gång. Allt från måla, virka till olika bygg
+            projekt,
+        </section>
+        <section id="shortinfo">
+            <article>
+                <h3> Styrka</h3>
                 <ul>
                     <li>Informations sökare</li>
-                    <li>ordningsam</li>
-                    <li>kreativ</li>
+                    <li>Ordningsam</li>
+                    <li>Kreativ</li>
                 </ul>
-                <h2>Språk</h2>
-                <ul>
-                    <li>svenska</li>
-                    <li>engelska</li>
-                </ul>
-            </article>
-            <article  class="about">
-                <h2>Hej!</h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-            </article>
-        </section>
-        <div class="background"></div>
-        <section>
-            <article class="skills">
-                <h2> Skills</h2>
+                <h3> Kunskap</h3>
                 <ul>
                     <li>Html</li>
                     <li>Css</li>
                     <li>Java-script</li>
-                    <li></li>
                 </ul>
-            </article>
 
-            <article class="work">
-                <h2>Erfarenhet:</h2>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>2013-nutid</th>
-                                <td> Pottan ab (före detta Godsinlösen) -service, försäljning, hantering av bagage, rengöring av lokaler m.m</td>
-                            </tr>
-                            <tr>
-                                <th>2008-2012</th>
-                                <td>Kock -Arbetat på diverse skolor. </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <h3>Språk</h3>
+                <ul>
+                    <li>svenska</li>
+                    <li>engelska</li>
+                </ul>
+
             </article>
-        </section> 
-        <section>
-            <article class="education">
+            <article id="whathaveidone">
+                <h2>Erfarenhet:</h2>
+                <table>
+                    <tbody>
+                        <tr>
+                            <th>2013-nutid</th>
+                            <td> Pottan ab (före detta Godsinlösen) -service, försäljning, hantering av bagage,
+                                rengöring av lokaler m.m</td>
+                        </tr>
+                        <tr>
+                            <th>2008-2012</th>
+                            <td>Kock -Arbetat på diverse skolor. </td>
+                        </tr>
+                    </tbody>
+                </table>
+
                 <h2>Utbilding:</h2>
                 <ul>
                     <li>Webbutveckling I V2021</li>
@@ -106,11 +79,12 @@
                     <li>Hotell & restaurang H2007-V2009</li>
                     <li>Webdesign, desktopp, information & layout V2009</li>
                 </ul>
-           </article>
-       </section>
-   </main>
-   <footer>
-    See you soon :)
-   </footer>
+            </article>
+        </section>
+    </main>
+    <footer>
+        thingeling
+    </footer>
 </body>
+
 </html>
